--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Explore Scss</h1>
-    <p>I recently watched the classic movie Casablanca. It was an amazing experience! The story was captivating and the acting was superb</p>
+    <p>I recently watched the classic movie Casablanca.</p>
     <ul>
         <li>css</li>
         <li>Scss</li>
